# backend

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: deploy.yml
backend/: Dockerfile  alembic.ini  prestart.sh
backend/app/: authorization_server.py  deps.py  main.py  security.py  settings.py
backend/app/alembic/: env.py
backend/app/database/: __init__.py  init_db.py
backend/app/domain/: __init__.py  business.py  chat.py  plan.py  user.py
backend/app/enums/: __init__.py  admin.py  business.py  chat.py  research.py  services.py  units.py  user.py
backend/app/exceptions/: __init__.py  base.py  subscriptions.py
backend/app/helpers/: __init__.py  helpers_auth.py  helpers_business.py  helpers_chat.py  helpers_payment.py  helpers_rag.py
backend/app/models/: __init__.py  business.py  chat.py  plan.py  user.py
backend/app/repositories/: __init__.py  businesses.py  chats.py  plans.py  user.py
backend/app/routers/: __init__.py  admin.py  business.py  business_research.py  chats.py  plans.py  subscriptions.py  users.py
backend/app/schemas/: __init__.py  business.py  business_research.py  chat.py  errors.py  plan_payments.py  plan_subscriptions.py  plans.py  subscriptions.py  token.py  user.py
backend/app/services/: __init__.py  aws_storage.py  factory.py  firebase_auth.py  openai.py  openai_embedding.py  (+3 more)
others/function_scheduler_business_research/: main.py
stratify_backend/: Dockerfile  alembic.ini  main.py  prestart.sh  pytest.ini
stratify_backend/app/: deps.py  main.py  security.py  settings.py
(+90 files in other folders)
