[tool.poetry]
name = "startify-backend"
version = "0.1.0"
description = ""
authors = ["Pau Duran <pduran.stratify@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
tox = "^4.24.1"
flake8 = "^7.1.1"
black = "^25.1.0"
pytest = "^8.3.4"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
